--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="contatc of croissant site">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,15 +10,15 @@
 
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Document</title>
+    <title>Croissant Contact</title>
 </head>
 <body>
     <h1 class="text-center mt-5">🥐 Contact us</h1>
     <p class="text-center">To contact croissant.com, please email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info</p>
      <footer>
-            <a href="/index.html">Homepage</a>
-            <a href="/photo.html">Photo</a>
-            <a href="/contact.html">Contact</a>
+            <a href="/index.html" title="homepage">Homepage</a>
+            <a href="/photo.html" title="photo">Photo</a>
+            <a href="/contact.html" title="contact">Contact</a>
     </footer>
 </body>
 </html>
