--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="everything about croissant">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,15 +10,15 @@
     
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>Croissant</title>
+    <title>Everything about Croissant</title>
 </head>
 <body>
     <h1 class="text-center mt-5">🥐🥐🥐 Croissant 🥐🥐🥐</h1>
         <p class="text-center mt-3">A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
         <footer>
-            <a href="/index.html">Homepage</a>
-            <a href="/photo.html">Photo</a>
-            <a href="/contact.html">Contact</a>
+            <a href="/index.html" title="homepage">Homepage</a>
+            <a href="/photo.html" title="photo">Photo</a>
+            <a href="/contact.html" title="contact">Contact</a>
         </footer>
 </body>
 </html>
