--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="photo of croissant">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -9,17 +10,17 @@
 
     <link rel="stylesheet" href="/css/style.css">
     
-    <title>Photo</title>
+    <title>the Croissant photo</title>
 
 </head>
 <body>
     <h1 class="text-center mt-5 mb-5">🥐 A picture of a croissant</h1>
-    <img src="image/croissant.jpg" class="img-fluid rounded mx-auto d-block">
+    <img src="image/croissant.jpg" class="img-fluid rounded mx-auto d-block" alt="enormous croissant">
 
     <footer>
-            <a href="/index.html">Homepage</a>
-            <a href="/photo.html">Photo</a>
-            <a href="/contact.html">Contact</a>
+            <a href="/index.html" title="homepage">Homepage</a>
+            <a href="/photo.html" title="photo">Photo</a>
+            <a href="/contact.html" title="contact">Contact</a>
     </footer>
 </body>
 </html>
